python_kquery/kqueryParser.py
# Generated from kquery.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class kqueryParser ( Parser ):

    grammarFileName = "kquery.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'query'", "'array'", "':'", "'->'", "'='", 
                     "'symbolic'", "'Not'", "'Shl'", "'LShr'", "'AShr'", 
                     "'Concat'", "'Extract'", "'ZExt'", "'SExt'", "'Read'", 
                     "'Select'", "'Neg'", "'ReadLSB'", "'ReadMSB'", "'And'", 
                     "'Or'", "'Xor'", "'Eq'", "'Ne'", "'Ult'", "'Ule'", 
                     "'Ugt'", "'Uge'", "'Slt'", "'Sle'", "'Sgt'", "'Sge'", 
                     "'Add'", "'Sub'", "'Mul'", "'UDiv'", "'URem'", "'SDiv'", 
                     "'SRem'", "','", "'true'", "'false'", "'fp'", "'i'", 
                     "'@'", "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'('", "')'", "'['", "']'", 
                     "'{'", "'}'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "SignedConstant", "Constant", 
                      "DecConstant", "BinConstant", "OctConstant", "HexConstant", 
                      "WidthType", "Identifier", "Digit", "WS", "LeftParen", 
                      "RightParen", "LeftBracket", "RightBracket", "LeftBrace", 
                      "RightBrace" ]

    RULE_kqueryExpression = 0
    RULE_ktranslationUnit = 1
    RULE_queryCommand = 2
    RULE_queryExpr = 3
    RULE_evalExprList = 4
    RULE_evalArrayList = 5
    RULE_arrayDeclaration = 6
    RULE_arrayInitializer = 7
    RULE_expression = 8
    RULE_bitwiseExpr = 9
    RULE_comparisonExpr = 10
    RULE_arithmeticExpr = 11
    RULE_domain = 12
    RULE_rangeLimit = 13
    RULE_arrName = 14
    RULE_numberList = 15
    RULE_number = 16
    RULE_floatingPointwidthType = 17
    RULE_integerwidthType = 18
    RULE_version = 19
    RULE_updateList = 20

    ruleNames =  [ "kqueryExpression", "ktranslationUnit", "queryCommand", 
                   "queryExpr", "evalExprList", "evalArrayList", "arrayDeclaration", 
                   "arrayInitializer", "expression", "bitwiseExpr", "comparisonExpr", 
                   "arithmeticExpr", "domain", "rangeLimit", "arrName", 
                   "numberList", "number", "floatingPointwidthType", "integerwidthType", 
                   "version", "updateList" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    SignedConstant=46
    Constant=47
    DecConstant=48
    BinConstant=49
    OctConstant=50
    HexConstant=51
    WidthType=52
    Identifier=53
    Digit=54
    WS=55
    LeftParen=56
    RightParen=57
    LeftBracket=58
    RightBracket=59
    LeftBrace=60
    RightBrace=61

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class KqueryExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(kqueryParser.EOF, 0)

        def ktranslationUnit(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(kqueryParser.KtranslationUnitContext)
            else:
                return self.getTypedRuleContext(kqueryParser.KtranslationUnitContext,i)


        def getRuleIndex(self):
            return kqueryParser.RULE_kqueryExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterKqueryExpression" ):
                listener.enterKqueryExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitKqueryExpression" ):
                listener.exitKqueryExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitKqueryExpression" ):
                return visitor.visitKqueryExpression(self)
            else:
                return visitor.visitChildren(self)




    def kqueryExpression(self):

        localctx = kqueryParser.KqueryExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_kqueryExpression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 45
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==kqueryParser.T__1 or _la==kqueryParser.LeftParen:
                self.state = 42
                self.ktranslationUnit()
                self.state = 47
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 48
            self.match(kqueryParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class KtranslationUnitContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def arrayDeclaration(self):
            return self.getTypedRuleContext(kqueryParser.ArrayDeclarationContext,0)


        def queryCommand(self):
            return self.getTypedRuleContext(kqueryParser.QueryCommandContext,0)


        def getRuleIndex(self):
            return kqueryParser.RULE_ktranslationUnit

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterKtranslationUnit" ):
                listener.enterKtranslationUnit(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitKtranslationUnit" ):
                listener.exitKtranslationUnit(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitKtranslationUnit" ):
                return visitor.visitKtranslationUnit(self)
            else:
                return visitor.visitChildren(self)




    def ktranslationUnit(self):

        localctx = kqueryParser.KtranslationUnitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_ktranslationUnit)
        try:
            self.state = 52
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [kqueryParser.T__1]:
                self.enterOuterAlt(localctx, 1)
                self.state = 50
                self.arrayDeclaration()
                pass
            elif token in [kqueryParser.LeftParen]:
                self.enterOuterAlt(localctx, 2)
                self.state = 51
                self.queryCommand()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class QueryCommandContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LeftParen(self):
            return self.getToken(kqueryParser.LeftParen, 0)

        def evalExprList(self):
            return self.getTypedRuleContext(kqueryParser.EvalExprListContext,0)


        def queryExpr(self):
            return self.getTypedRuleContext(kqueryParser.QueryExprContext,0)


        def RightParen(self):
            return self.getToken(kqueryParser.RightParen, 0)

        def getRuleIndex(self):
            return kqueryParser.RULE_queryCommand

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQueryCommand" ):
                listener.enterQueryCommand(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQueryCommand" ):
                listener.exitQueryCommand(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitQueryCommand" ):
                return visitor.visitQueryCommand(self)
            else:
                return visitor.visitChildren(self)




    def queryCommand(self):

        localctx = kqueryParser.QueryCommandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_queryCommand)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 54
            self.match(kqueryParser.LeftParen)
            self.state = 55
            self.match(kqueryParser.T__0)
            self.state = 56
            self.evalExprList()
            self.state = 57
            self.queryExpr()
            self.state = 58
            self.match(kqueryParser.RightParen)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class QueryExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(kqueryParser.ExpressionContext,0)


        def evalExprList(self):
            return self.getTypedRuleContext(kqueryParser.EvalExprListContext,0)


        def evalArrayList(self):
            return self.getTypedRuleContext(kqueryParser.EvalArrayListContext,0)


        def getRuleIndex(self):
            return kqueryParser.RULE_queryExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQueryExpr" ):
                listener.enterQueryExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQueryExpr" ):
                listener.exitQueryExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitQueryExpr" ):
                return visitor.visitQueryExpr(self)
            else:
                return visitor.visitChildren(self)




    def queryExpr(self):

        localctx = kqueryParser.QueryExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_queryExpr)
        try:
            self.state = 69
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 60
                self.expression()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 61
                self.expression()
                self.state = 62
                self.evalExprList()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 64
                self.expression()
                self.state = 65
                self.evalExprList()
                self.state = 66
                self.evalArrayList()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EvalExprListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LeftBracket(self):
            return self.getToken(kqueryParser.LeftBracket, 0)

        def expression(self):
            return self.getTypedRuleContext(kqueryParser.ExpressionContext,0)


        def RightBracket(self):
            return self.getToken(kqueryParser.RightBracket, 0)

        def getRuleIndex(self):
            return kqueryParser.RULE_evalExprList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEvalExprList" ):
                listener.enterEvalExprList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEvalExprList" ):
                listener.exitEvalExprList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEvalExprList" ):
                return visitor.visitEvalExprList(self)
            else:
                return visitor.visitChildren(self)




    def evalExprList(self):

        localctx = kqueryParser.EvalExprListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_evalExprList)
        try:
            self.state = 78
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 71
                self.match(kqueryParser.LeftBracket)
                self.state = 72
                self.expression()
                self.state = 73
                self.match(kqueryParser.RightBracket)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 75
                self.match(kqueryParser.LeftBracket)
                self.state = 76
                self.match(kqueryParser.RightBracket)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EvalArrayListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LeftBracket(self):
            return self.getToken(kqueryParser.LeftBracket, 0)

        def Identifier(self):
            return self.getToken(kqueryParser.Identifier, 0)

        def RightBracket(self):
            return self.getToken(kqueryParser.RightBracket, 0)

        def getRuleIndex(self):
            return kqueryParser.RULE_evalArrayList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEvalArrayList" ):
                listener.enterEvalArrayList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEvalArrayList" ):
                listener.exitEvalArrayList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEvalArrayList" ):
                return visitor.visitEvalArrayList(self)
            else:
                return visitor.visitChildren(self)




    def evalArrayList(self):

        localctx = kqueryParser.EvalArrayListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_evalArrayList)
        try:
            self.state = 86
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 80
                self.match(kqueryParser.LeftBracket)
                self.state = 81
                self.match(kqueryParser.Identifier)
                self.state = 82
                self.match(kqueryParser.RightBracket)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 83
                self.match(kqueryParser.LeftBracket)
                self.state = 84
                self.match(kqueryParser.RightBracket)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrayDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def arrName(self):
            return self.getTypedRuleContext(kqueryParser.ArrNameContext,0)


        def LeftBracket(self):
            return self.getToken(kqueryParser.LeftBracket, 0)

        def RightBracket(self):
            return self.getToken(kqueryParser.RightBracket, 0)

        def domain(self):
            return self.getTypedRuleContext(kqueryParser.DomainContext,0)


        def rangeLimit(self):
            return self.getTypedRuleContext(kqueryParser.RangeLimitContext,0)


        def arrayInitializer(self):
            return self.getTypedRuleContext(kqueryParser.ArrayInitializerContext,0)


        def Digit(self, i:int=None):
            if i is None:
                return self.getTokens(kqueryParser.Digit)
            else:
                return self.getToken(kqueryParser.Digit, i)

        def getRuleIndex(self):
            return kqueryParser.RULE_arrayDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArrayDeclaration" ):
                listener.enterArrayDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArrayDeclaration" ):
                listener.exitArrayDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArrayDeclaration" ):
                return visitor.visitArrayDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def arrayDeclaration(self):

        localctx = kqueryParser.ArrayDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_arrayDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            self.match(kqueryParser.T__1)
            self.state = 89
            self.arrName()
            self.state = 90
            self.match(kqueryParser.LeftBracket)
            self.state = 94
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==kqueryParser.Digit:
                self.state = 91
                self.match(kqueryParser.Digit)
                self.state = 96
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 97
            self.match(kqueryParser.RightBracket)
            self.state = 98
            self.match(kqueryParser.T__2)
            self.state = 99
            self.domain()
            self.state = 100
            self.match(kqueryParser.T__3)
            self.state = 101
            self.rangeLimit()
            self.state = 102
            self.match(kqueryParser.T__4)
            self.state = 103
            self.arrayInitializer()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrayInitializerContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LeftBracket(self):
            return self.getToken(kqueryParser.LeftBracket, 0)

        def numberList(self):
            return self.getTypedRuleContext(kqueryParser.NumberListContext,0)


        def RightBracket(self):
            return self.getToken(kqueryParser.RightBracket, 0)

        def getRuleIndex(self):
            return kqueryParser.RULE_arrayInitializer

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArrayInitializer" ):
                listener.enterArrayInitializer(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArrayInitializer" ):
                listener.exitArrayInitializer(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArrayInitializer" ):
                return visitor.visitArrayInitializer(self)
            else:
                return visitor.visitChildren(self)




    def arrayInitializer(self):

        localctx = kqueryParser.ArrayInitializerContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_arrayInitializer)
        try:
            self.state = 110
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [kqueryParser.T__5]:
                self.enterOuterAlt(localctx, 1)
                self.state = 105
                self.match(kqueryParser.T__5)
                pass
            elif token in [kqueryParser.LeftBracket]:
                self.enterOuterAlt(localctx, 2)
                self.state = 106
                self.match(kqueryParser.LeftBracket)
                self.state = 107
                self.numberList()
                self.state = 108
                self.match(kqueryParser.RightBracket)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(kqueryParser.Identifier, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(kqueryParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(kqueryParser.ExpressionContext,i)


        def LeftParen(self):
            return self.getToken(kqueryParser.LeftParen, 0)

        def WidthType(self):
            return self.getToken(kqueryParser.WidthType, 0)

        def number(self):
            return self.getTypedRuleContext(kqueryParser.NumberContext,0)


        def RightParen(self):
            return self.getToken(kqueryParser.RightParen, 0)

        def arithmeticExpr(self):
            return self.getTypedRuleContext(kqueryParser.ArithmeticExprContext,0)


        def LeftBracket(self):
            return self.getToken(kqueryParser.LeftBracket, 0)

        def RightBracket(self):
            return self.getToken(kqueryParser.RightBracket, 0)

        def bitwiseExpr(self):
            return self.getTypedRuleContext(kqueryParser.BitwiseExprContext,0)


        def comparisonExpr(self):
            return self.getTypedRuleContext(kqueryParser.ComparisonExprContext,0)


        def version(self):
            return self.getTypedRuleContext(kqueryParser.VersionContext,0)


        def getRuleIndex(self):
            return kqueryParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpression" ):
                return visitor.visitExpression(self)
            else:
                return visitor.visitChildren(self)




    def expression(self):

        localctx = kqueryParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_expression)
        try:
            self.state = 233
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 112
                self.match(kqueryParser.Identifier)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 113
                self.match(kqueryParser.Identifier)
                self.state = 114
                self.match(kqueryParser.T__2)
                self.state = 115
                self.expression()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 116
                self.match(kqueryParser.LeftParen)
                self.state = 117
                self.match(kqueryParser.WidthType)
                self.state = 118
                self.number()
                self.state = 119
                self.match(kqueryParser.RightParen)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 121
                self.match(kqueryParser.LeftParen)
                self.state = 122
                self.arithmeticExpr()
                self.state = 123
                self.match(kqueryParser.WidthType)
                self.state = 124
                self.expression()
                self.state = 125
                self.expression()
                self.state = 126
                self.match(kqueryParser.RightParen)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 128
                self.match(kqueryParser.LeftParen)
                self.state = 129
                self.match(kqueryParser.T__6)
                self.state = 130
                self.match(kqueryParser.LeftBracket)
                self.state = 131
                self.match(kqueryParser.WidthType)
                self.state = 132
                self.match(kqueryParser.RightBracket)
                self.state = 133
                self.expression()
                self.state = 134
                self.match(kqueryParser.RightParen)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 136
                self.match(kqueryParser.LeftParen)
                self.state = 137
                self.bitwiseExpr()
                self.state = 138
                self.match(kqueryParser.WidthType)
                self.state = 139
                self.expression()
                self.state = 140
                self.expression()
                self.state = 141
                self.match(kqueryParser.RightParen)
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 143
                self.match(kqueryParser.LeftParen)
                self.state = 144
                self.match(kqueryParser.T__7)
                self.state = 145
                self.match(kqueryParser.WidthType)
                self.state = 146
                self.expression()
                self.state = 147
                self.expression()
                self.state = 148
                self.match(kqueryParser.RightParen)
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 150
                self.match(kqueryParser.LeftParen)
                self.state = 151
                self.match(kqueryParser.T__8)
                self.state = 152
                self.match(kqueryParser.WidthType)
                self.state = 153
                self.expression()
                self.state = 154
                self.expression()
                self.state = 155
                self.match(kqueryParser.RightParen)
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 157
                self.match(kqueryParser.LeftParen)
                self.state = 158
                self.match(kqueryParser.T__9)
                self.state = 159
                self.match(kqueryParser.WidthType)
                self.state = 160
                self.expression()
                self.state = 161
                self.expression()
                self.state = 162
                self.match(kqueryParser.RightParen)
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 164
                self.match(kqueryParser.LeftParen)
                self.state = 165
                self.comparisonExpr()

                self.state = 166
                self.match(kqueryParser.WidthType)
                self.state = 167
                self.expression()
                self.state = 168
                self.expression()
                self.state = 169
                self.match(kqueryParser.RightParen)
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 171
                self.match(kqueryParser.LeftParen)
                self.state = 172
                self.match(kqueryParser.T__10)

                self.state = 173
                self.match(kqueryParser.WidthType)
                self.state = 174
                self.expression()
                self.state = 175
                self.expression()
                self.state = 176
                self.match(kqueryParser.RightParen)
                pass

            elif la_ == 12:
                self.enterOuterAlt(localctx, 12)
                self.state = 178
                self.match(kqueryParser.LeftParen)
                self.state = 179
                self.match(kqueryParser.T__11)
                self.state = 180
                self.match(kqueryParser.WidthType)
                self.state = 181
                self.number()
                self.state = 182
                self.expression()
                self.state = 183
                self.match(kqueryParser.RightParen)
                pass

            elif la_ == 13:
                self.enterOuterAlt(localctx, 13)
                self.state = 185
                self.match(kqueryParser.LeftParen)
                self.state = 186
                self.match(kqueryParser.T__12)
                self.state = 187
                self.match(kqueryParser.WidthType)
                self.state = 188
                self.expression()
                self.state = 189
                self.match(kqueryParser.RightParen)
                pass

            elif la_ == 14:
                self.enterOuterAlt(localctx, 14)
                self.state = 191
                self.match(kqueryParser.LeftParen)
                self.state = 192
                self.match(kqueryParser.T__13)
                self.state = 193
                self.match(kqueryParser.WidthType)
                self.state = 194
                self.expression()
                self.state = 195
                self.match(kqueryParser.RightParen)
                pass

            elif la_ == 15:
                self.enterOuterAlt(localctx, 15)
                self.state = 197
                self.match(kqueryParser.LeftParen)
                self.state = 198
                self.match(kqueryParser.T__14)
                self.state = 199
                self.match(kqueryParser.WidthType)
                self.state = 200
                self.expression()
                self.state = 201
                self.version()
                self.state = 202
                self.match(kqueryParser.RightParen)
                pass

            elif la_ == 16:
                self.enterOuterAlt(localctx, 16)
                self.state = 204
                self.match(kqueryParser.LeftParen)
                self.state = 205
                self.match(kqueryParser.T__15)
                self.state = 206
                self.match(kqueryParser.WidthType)
                self.state = 207
                self.expression()
                self.state = 208
                self.expression()
                self.state = 209
                self.expression()
                self.state = 210
                self.match(kqueryParser.RightParen)
                pass

            elif la_ == 17:
                self.enterOuterAlt(localctx, 17)
                self.state = 212
                self.match(kqueryParser.LeftParen)
                self.state = 213
                self.match(kqueryParser.T__16)
